--- a/book-table.html
+++ b/book-table.html
@@ -80,92 +80,107 @@
         <div class="page-title ">
             <div class="container">
                 <div class="page-title__content text-center">
-                    <h2>About</h2>
+                    <h2>Now Book Table </h2>
                     <ul>
                         <li>
                             <a href="">Home <i class="fas fa-chevron-right"></i> </a>
                         </li>
-                        <li>About</li>
+                        <li>Book Table</li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!--Start Histry--1-->
-    <div class="our-histry our-histry-about-1">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <div class="history-title">
-                        <h2>A History Has Written For Asahi Explore
-                            <span>more Our About</span>
-                        </h2>
-                        <img src="./img/shape-1.png">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
+    <!--Book Table-->
+    <div class=" book-table-main book-table">
+        <div class="book-table__form">
+            <div class="container">
+                <div class="book-table__form--bookForm text-center">
+                    <div class="book-form-wrap">
+                        <h3>Reserve your table for next lunch</h3>
+                        <form>
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="form-group">
+                                        <select name="select" id="select">
+                                            <option selected class="2">Number Of People</option>
+                                            <option value="1 ">1</option>
+                                            <option value="2 ">2</option>
+                                            <option value="3 ">3</option>
+                                            <option value="4 ">4</option>
+                                            <option value="5 ">5</option>
+                                            <option value="10 ">10</option>
+                                            <option value="15 ">15</option>
+                                            <option value="20 ">20</option>
+                                            <option value="25 ">25</option>
+                                        </select>
+                                        <span class="input-group-addon">
+                                            <i class="fas fa-user"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="form-group">
+                                        <input size="16" type="text" class="form-control" id="datetime" placeholder="Date & Time" value="Date & Time" readonly>
+                                        <!--js datetime-->
+                                        <script type="text/javascript">
+                                            $("#datetime").datetimepicker({
+                                                format: 'mm-dd-yyyy hh:ii'
+                                            });
+                                        </script>
+                                        <!--END js__datetime-->
+                                        <span class="input-group-addon clock">
+                                            <i class="far fa-clock "></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="form-group">
+                                        <select name="select" id="select">
+                                            <option selected class="2">Number Of Table</option>
+                                            <option value="1 ">1</option>
+                                            <option value="2 ">2</option>
+                                            <option value="3 ">3</option>
+                                            <option value="4 ">4</option>
+                                            <option value="5 ">5</option>
+                                            <option value="6 ">10</option>
+                                            <option value="7">15</option>
+                                            <option value="8">20</option>
+                                            <option value="9">25</option>
+                                        </select>
+                                        <span class="input-group-addon users">
+                                            <i class="fas fa-users"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="form-group">
+                                        <input type="text" placeholder="Number Phone">
+                                        <span class="input-group-addon phone">
+                                            <i class="fas fa-phone"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <textarea name="message " id="message " placeholder="Your Message " rows="6 "></textarea>
+                                        <span class="input-group-addon text-file">
+                                            <i class="far fa-file-alt"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-6 offset-sm-3 offset-md-4 offset-lg-4">
+                                    <button type="submit" class="default-btn">FIND A TABLE</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <img class="img-fluid" src="./img/about-1.jpg" alt="about-1">
                 </div>
             </div>
         </div>
     </div>
-    <!--End Histry--1-->
-    <!--Event-->
-    <div class="our-histry our-histry-event">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <div class="row  text-center">
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <div class="event-img-1">
-                                <img class="img-fluid" src="./img/event-1.jpg" alt="event-1">
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <div class="event-img-2">
-                                <img class="img-fluid" src="./img/event-2.jpg" alt="event-2">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="history-title">
-                        <h2>A warm & Friendly Atmosphere With a
-                            <span>event a suppor</span>
-                        </h2>
-                        <img src="./img/shape-1.png">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End Event-->
-    <!--Start Histry--2-->
-    <div class="our-histry our-histry-about-2">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <div class="history-title">
-                        <h2>A History Has Written For Asahi Explore
-                            <span>more Our Story</span>
-                        </h2>
-                        <img src="./img/shape-1.png">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
-                    </div>
-                </div>
-                <div class="col-lg-6  text-center">
-                    <img class="img-fluid" src="./img/about-2.jpg" alt="about-2">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End Histry--2-->
+    <!--End Book-Table-->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -328,7 +343,6 @@
     <script>
         new WOW().init();
     </script>
-
     <!-- script for coutup number -->
     <script src="./vendors/Waypoints/jquery.waypoints.min.js "></script>
     <script src="./vendors/counterup/inview.min.js "></script>
