change icon service and add page.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="single-service text-center">
                         <div class="service-icon">
-                            <i class="fab fa-accusoft"></i>
+                            <i class="fas fa-concierge-bell"></i>
                         </div>
                         <h3>
                             Best Food <span>Quality</span>
@@ -147,7 +147,7 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="single-service text-center">
                         <div class="service-icon">
-                            <i class="fab fa-accusoft"></i>
+                            <i class="fas fa-cloud"></i>
                         </div>
                         <h3>
                             Magical <span>Atmosphere</span>
@@ -158,7 +158,7 @@
                 <div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 mb-5">
                     <div class="single-service text-center">
                         <div class="service-icon">
-                            <i class="fab fa-accusoft"></i>
+                            <i class="fas fa-money-check-alt"></i>
                         </div>
                         <h3>
                             Low Costing <span>Food</span>
@@ -374,7 +374,9 @@
                             <div class="price"><span>$30</span></div>
                         </div>
                         <div class="item-text">
-                            <h3>Broduos Grenti menso</h3>
+                            <a href="">
+                                <h3>Broduos Grenti menso</h3>
+                            </a>
                             <p> Lorem ipsum dolor siamonsectetur adipiscing elit, sed do</p>
                         </div>
                     </div>
@@ -386,7 +388,9 @@
                             <div class="price"><span>$15</span></div>
                         </div>
                         <div class="item-text">
-                            <h3>Broduos Grenti menso</h3>
+                            <a href="">
+                                <h3>Broduos Grenti menso</h3>
+                            </a>
                             <p> Lorem ipsum dolor siamonsectetur adipiscing elit, sed do</p>
                         </div>
                     </div>
@@ -398,7 +402,9 @@
                             <div class="price"><span>$60</span></div>
                         </div>
                         <div class="item-text">
-                            <h3>Almond Baked Brie</h3>
+                            <a href="">
+                                <h3>Almond Baked Brie</h3>
+                            </a>
                             <p> Lorem ipsum dolor siamonsectetur adipiscing elit, sed do</p>
                         </div>
                     </div>
@@ -410,7 +416,9 @@
                             <div class="price"><span>$50</span></div>
                         </div>
                         <div class="item-text">
-                            <h3>Tuscan Flatbread</h3>
+                            <a href="">
+                                <h3>Tuscan Flatbread</h3>
+                            </a>
                             <p> Lorem ipsum dolor siamonsectetur adipiscing elit, sed do</p>
                         </div>
                     </div>
