Add animation, Page Shop

--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
                 <img src="./img/404.jpg" alt="404 Error">
                 <h3>Oops! Page Not Found</h3>
                 <p>The page you were looking for could not be found.</p>
-                <a href="#" class="btn"> Return Home Page →</a>
+                <a href="index.html" class="btn wow shake"> Return Home Page →</a>
             </div>
         </div>
     </div>
