--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         <div class="page-title ">
             <div class="container">
                 <div class="page-title__content text-center">
-                    <h2>About</h2>
+                    <h2 class="wow shake">About</h2>
                     <ul>
                         <li>
                             <a href="">Home <i class="fas fa-chevron-right"></i> </a>
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <div class="history-title">
+                    <div class="history-title wow fadeInLeft">
                         <h2>A History Has Written For Asahi Explore
                             <span>more Our About</span>
                         </h2>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img class="img-fluid" src="./img/about-1.jpg" alt="about-1">
+                    <img class="img-fluid wow fadeInRight" src="./img/about-1.jpg" alt="about-1">
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="history-title">
-                        <h2>A warm & Friendly Atmosphere With a
+                        <h2 class=" wow shake">A warm & Friendly Atmosphere With a
                             <span>event a suppor</span>
                         </h2>
                         <img src="./img/shape-1.png">
@@ -151,7 +151,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="history-title">
-                        <h2>A History Has Written For Asahi Explore
+                        <h2 class=" wow shake">A History Has Written For Asahi Explore
                             <span>more Our Story</span>
                         </h2>
                         <img src="./img/shape-1.png">
@@ -166,13 +166,14 @@
         </div>
     </div>
     <!--End Histry--2-->
+    <!--Footer-->
     <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-footer single-footer--1">
                         <a href="">
-                            <img src="./img/logo.png" class="img-fluid" alt="">
+                            <img src="./img/logo.png" class="img-fluid wow zoomIn" alt="">
                         </a>
                         <p>Sign up to our newsletter to get the latest food item news.</p>
                         <form>
@@ -232,7 +233,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-3">
-                    <ul class="social-list">
+                    <ul class="social-list wow bounceInLeft">
                         <li>
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -261,14 +262,14 @@
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="copy-right">
+                    <div class="copy-right  wow bounceInUp">
                         <p>
                             © 2020 All Rights Reserved</a>
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-3">
-                    <ul class="bank-card">
+                    <ul class="bank-card  wow bounceInRight">
                         <li>
                             <a href="#">
                                 <img src="./img/payment-1.png" class="img-fluid">
@@ -305,11 +306,11 @@
         <div class="navigation__background">&nbsp;</div>
         <div class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">Log In</a></li>
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">Sign Up</a></li>
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">FAQ</a></li>
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">Log Out</a></li>
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">Enroll form</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Log In</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Sign Up</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">FAQ</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Log Out</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Enroll form</a></li>
             </ul>
         </div>
     </div>
