--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                     <img data-src="./images/background2.jpg" src="./img/img-slide-2.jpg" class="img-fluid" alt="First slide">
                     <div class="hero-slider-text">
                         <span>Welcome to Asahi</span>
-                        <h1>Restaurant Fresh Dishes For Home
+                        <h1 class="wow fadeInUp ">Restaurant Fresh Dishes For Home
                             <span>Desh lover</span>
                         </h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
+                        <p class="wow fadeInDown ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
                         <a href="#" class="default-btn">BOOK TABLE  <i class="mr-2">→</i>   </a>
                     </div>
                 </div>
@@ -99,10 +99,10 @@
                     <img data-src="./images/background3.jpg" src="./img/img-slide-3.jpg" class="img-fluid" alt="Second slide">
                     <div class="hero-slider-text">
                         <span>Welcome to Asahi</span>
-                        <h1>The best way to celebrate the some
+                        <h1 class="wow fadeInUp">The best way to celebrate the some
                             <span>delicious food.</span>
                         </h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
+                        <p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
                         <a href="#" class="default-btn">BOOK TABLE  <i class="mr-2">→</i></a>
                     </div>
                 </div>
@@ -110,10 +110,10 @@
                     <img data-src="./images/background1.jpg" src="./img/img-slide-1.jpg" class="img-fluid" alt="Third slide">
                     <div class="hero-slider-text">
                         <span>Welcome to Asahi</span>
-                        <h1>Good food is to be enjoyed food very
+                        <h1 class="wow fadeInUp">Good food is to be enjoyed food very
                             <span>beautiful in itse</span>
                         </h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
+                        <p class="wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
                         <a href="#" class="default-btn">BOOK TABLE  <i class="mr-2">→</i></a>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-5">
-                    <div class="single-service text-center">
+                    <div class="single-service text-center wow fadeInLeft">
                         <div class="service-icon">
                             <i class="fas fa-concierge-bell"></i>
                         </div>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-5">
-                    <div class="single-service text-center">
+                    <div class="single-service text-center wow fadeInUp">
                         <div class="service-icon">
                             <i class="fas fa-cloud"></i>
                         </div>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 mb-5">
-                    <div class="single-service text-center">
+                    <div class="single-service text-center wow fadeInRight">
                         <div class="service-icon">
                             <i class="fas fa-money-check-alt"></i>
                         </div>
@@ -175,7 +175,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="history-title">
+                    <div class="history-title wow fadeInLeft">
                         <h2>A History Has Written For Asahi Explore
                             <span>more Our Story</span>
                         </h2>
@@ -187,8 +187,8 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="single-history">
-                        <img src="./img/story-1.jpg" class="img-story-1 img-fluid">
-                        <img src="./img/story-2.jpg" class="img-story-2 img-fluid">
+                        <img src="./img/story-1.jpg" class="img-story-1 img-fluid wow fadeInRight">
+                        <img src="./img/story-2.jpg" class="img-story-2 img-fluid  wow fadeInDown">
                     </div>
 
                 </div>
@@ -197,15 +197,15 @@
     </div>
     <!-- End our-histry-->
     <!-- Start delicious-menus-->
-    <div class="delicious-menus">
+    <div class="delicious-menus ">
         <div class="container">
             <div class="delicious-menus-wrap">
                 <div class="section-title text-center">
-                    <h2>
+                    <h2 class="wow fadeInDown">
                         Check Our <span>Delicious Menu</span>
                     </h2>
                 </div>
-                <div class="row">
+                <div class="row wow zoomIn">
                     <div class="col-lg-4 col-md-6">
                         <div class="single-delicious-menu">
                             <div class="menu-list-img">
@@ -346,7 +346,7 @@
                     <div class="col-lg-8">
                         <p>The menu will be avail able for all or our coustomer please check button all menu</p>
                     </div>
-                    <div class="col-lg-4 see-full-menu--btn">
+                    <div class="col-lg-4 see-full-menu--btn wow flipInY">
                         <a href="#" class="default-btn">SEE FULL MENU  <i class="mr-2">→</i>   </a>
                     </div>
                 </div>
@@ -358,17 +358,17 @@
     <div class="speacial-offers">
         <div class="container">
             <div class="section-title text-center">
-                <h2>
+                <h2 class="wow fadeInLeft">
                     Our Daily <span>Speacial Offers</span>
                 </h2>
                 <img src="./img/shape-1.png">
-                <p>
+                <p class="wow fadeInRight">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis ipsum suspendisse.
                 </p>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-sm-6 col-md-6">
-                    <div class="single-speacial-offers">
+                    <div class="single-speacial-offers wow zoomIn">
                         <div class="menu-img">
                             <img src="./img/speacial-offers-1.jpg" class="img-fluid">
                             <div class="price"><span>$30</span></div>
@@ -382,7 +382,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 col-md-6">
-                    <div class="single-speacial-offers">
+                    <div class="single-speacial-offers wow zoomIn">
                         <div class="menu-img">
                             <img src="./img/speacial-offers-2.jpg" class="img-fluid">
                             <div class="price"><span>$15</span></div>
@@ -396,7 +396,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 col-md-6">
-                    <div class="single-speacial-offers">
+                    <div class="single-speacial-offers  wow zoomIn">
                         <div class="menu-img">
                             <img src="./img/speacial-offers-3.jpg" class="img-fluid">
                             <div class="price"><span>$60</span></div>
@@ -410,7 +410,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 col-md-6">
-                    <div class="single-speacial-offers">
+                    <div class="single-speacial-offers wow zoomIn">
                         <div class="menu-img">
                             <img src="./img/speacial-offers-4.jpg" class="img-fluid">
                             <div class="price"><span>$50</span></div>
@@ -445,7 +445,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 d-flex justify-content-end">
-                    <div class="offer__logo hi">
+                    <div class="offer__logo wow rotateIn">
                         <p>30%</p>
                         <span>Off</span>
                     </div>
@@ -492,7 +492,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 p-0 ">
-                    <div class="book-table__form">
+                    <div class="book-table__form wow shake">
                         <div class="container-fluid">
                             <div class="book-table__form--bookForm text-center">
                                 <div class="book-form-wrap">
@@ -562,7 +562,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 p-0">
-                    <div class="contact-info">
+                    <div class="contact-info wow lightSpeedIn">
                         <div class="contact-info__textbox">
                             <h3>Our contract info</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adip suspendisse ultrices gravida. Risus commodo svel facilisis.</p>
@@ -612,7 +612,7 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-sm-8 offset-md-2 offset-sm-2">
-                                <img src="./img/feedback-1.jpg" class="img-fluid">
+                                <img src="./img/feedback-1.jpg" class="img-fluid wow flip">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisist
                                     amet, consectetur adipiscing elit, sed do eiusm.
                                 </p>
@@ -626,7 +626,7 @@
                         <div class="row">
 
                             <div class="col-sm-8 offset-md-2 offset-sm-2">
-                                <img src="./img/feedback-2.jpg" class="img-fluid">
+                                <img src="./img/feedback-2.jpg" class="img-fluid wow flip">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisist
                                     amet, consectetur adipiscing elit, sed do eiusm.
                                 </p>
@@ -639,7 +639,7 @@
                     <div class="carousel-item ">
                         <div class="row">
                             <div class="col-sm-8 offset-md-2 offset-sm-2">
-                                <img src="./img/feedback-3.jpg" class="img-fluid">
+                                <img src="./img/feedback-3.jpg" class="img-fluid wow flip">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisist
                                     amet, consectetur adipiscing elit, sed do eiusm.</p>
                                 <h3>Wanino doms</h3>
@@ -659,7 +659,7 @@
     <div class="blog">
         <div class="container">
             <div class="section-title text-center">
-                <h2>
+                <h2 class="wow flipInX">
                     From <span>Our Blog</span>
                 </h2>
                 <img src="./img/shape-1.png">
@@ -669,7 +669,7 @@
             </div>
             <div class="row" style="margin-top:5rem">
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-blog">
+                    <div class="single-blog wow fadeInLeft">
                         <a href="">
                             <img src="./img/blog-1.jpg" class="img-fluid">
                         </a>
@@ -685,7 +685,7 @@
 
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-blog">
+                    <div class="single-blog  wow fadeInUp">
                         <a href="">
                             <img src="./img/blog-2.jpg" class="img-fluid">
                         </a>
@@ -700,7 +700,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
-                    <div class="single-blog">
+                    <div class="single-blog  wow fadeInRight">
                         <a href="">
                             <img src="./img/blog-3.jpg" class="img-fluid">
                         </a>
@@ -725,7 +725,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-footer single-footer--1">
                         <a href="">
-                            <img src="./img/logo.png" class="img-fluid" alt="">
+                            <img src="./img/logo.png" class="img-fluid wow zoomIn" alt="">
                         </a>
                         <p>Sign up to our newsletter to get the latest food item news.</p>
                         <form>
@@ -785,7 +785,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-3">
-                    <ul class="social-list">
+                    <ul class="social-list wow bounceInLeft">
                         <li>
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -814,14 +814,14 @@
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="copy-right">
+                    <div class="copy-right  wow bounceInUp">
                         <p>
                             © 2020 All Rights Reserved</a>
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-3">
-                    <ul class="bank-card">
+                    <ul class="bank-card  wow bounceInRight">
                         <li>
                             <a href="#">
                                 <img src="./img/payment-1.png" class="img-fluid">
@@ -858,11 +858,11 @@
         <div class="navigation__background">&nbsp;</div>
         <div class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">Log In</a></li>
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">Sign Up</a></li>
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">FAQ</a></li>
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">Log Out</a></li>
-                <li class="navigation__item"><a href="/redirect?Id=Ok7QNCdcSHCUf3tyR7o94w%3d%3d" class="navigation__link">Enroll form</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Log In</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Sign Up</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">FAQ</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Log Out</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Enroll form</a></li>
             </ul>
         </div>
     </div>
