--- a/testModal.html
+++ b/testModal.html
@@ -170,17 +170,15 @@
             });
             //end modal
 
-            // $(".form-control").click(function() {
-            // $(this).siblings('label').addClass('active1');
-            // $(this).siblings("label").animate({
-            //     marginTop: '-3rem',
-            //     fontSize: '1.3rem'
-            // });
-            //});
-            //body
-            $('body .form-control').click(function() {
-                $("label").addClass("active1");
+            $(".form-control").click(function() {
+                $(this).siblings('label').addClass('active1');
+                // $(this).siblings("label").animate({
+                //     marginTop: '-3rem',
+                //     fontSize: '1.3rem'
+                // });
             });
+            //body
+
 
 
             // $("body").click(function() {
