--- a/shop.html
+++ b/shop.html
@@ -80,107 +80,271 @@
         <div class="page-title ">
             <div class="container">
                 <div class="page-title__content text-center">
-                    <h2 class="wow shake">Now Book Table </h2>
+                    <h2 class="wow shake">Shop</h2>
                     <ul>
                         <li>
                             <a href="">Home <i class="fas fa-chevron-right"></i> </a>
                         </li>
-                        <li>Book Table</li>
+                        <li>Shop</li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!--Book Table-->
-    <div class=" book-table-main book-table">
-        <div class="book-table__form">
-            <div class="container">
-                <div class="book-table__form--bookForm text-center">
-                    <div class="book-form-wrap">
-                        <h3>Reserve your table for next lunch</h3>
-                        <form>
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="form-group">
-                                        <select name="select" id="select">
-                                            <option selected class="2">Number Of People</option>
-                                            <option value="1 ">1</option>
-                                            <option value="2 ">2</option>
-                                            <option value="3 ">3</option>
-                                            <option value="4 ">4</option>
-                                            <option value="5 ">5</option>
-                                            <option value="10 ">10</option>
-                                            <option value="15 ">15</option>
-                                            <option value="20 ">20</option>
-                                            <option value="25 ">25</option>
-                                        </select>
-                                        <span class="input-group-addon">
-                                            <i class="fas fa-user"></i>
-                                        </span>
+    <!--Start section-menu-->
+    <div class="menu-section">
+        <div class="container">
+            <div class="row">
+                <!--Item1-->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-menu-item text-center wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-1.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Broduos Grenti menso</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
                                     </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="form-group">
-                                        <input size="16" type="text" class="form-control" id="datetime" placeholder="Date & Time" value="Date & Time" readonly>
-                                        <!--js datetime-->
-                                        <script type="text/javascript">
-                                            $("#datetime").datetimepicker({
-                                                format: 'mm-dd-yyyy hh:ii'
-                                            });
-                                        </script>
-                                        <!--END js__datetime-->
-                                        <span class="input-group-addon clock">
-                                            <i class="far fa-clock "></i>
-                                        </span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--Item2-->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-menu-item text-center  wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-2.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Raspberry Stuffed French</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
                                     </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="form-group">
-                                        <select name="select" id="select">
-                                            <option selected class="2">Number Of Table</option>
-                                            <option value="1 ">1</option>
-                                            <option value="2 ">2</option>
-                                            <option value="3 ">3</option>
-                                            <option value="4 ">4</option>
-                                            <option value="5 ">5</option>
-                                            <option value="6 ">10</option>
-                                            <option value="7">15</option>
-                                            <option value="8">20</option>
-                                            <option value="9">25</option>
-                                        </select>
-                                        <span class="input-group-addon users">
-                                            <i class="fas fa-users"></i>
-                                        </span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--Item3-->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-menu-item text-center  wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-3.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Rainbow Vegetable Sandwich</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
                                     </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" placeholder="Number Phone">
-                                        <span class="input-group-addon phone">
-                                            <i class="fas fa-phone"></i>
-                                        </span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--Item4-->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-menu-item text-center  wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-4.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Broduos Grenti menso</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
                                     </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <textarea name="message " id="message " placeholder="Your Message " rows="6 "></textarea>
-                                        <span class="input-group-addon text-file">
-                                            <i class="far fa-file-alt"></i>
-                                        </span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--Item5-->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-menu-item text-center wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-5.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Rainbow Vegetable Sandwich</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
                                     </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 offset-sm-3 offset-md-4 offset-lg-4">
-                                    <button type="submit" class="default-btn wow shake">FIND A TABLE</button>
-                                </div>
-                            </div>
-                        </form>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--Item6-->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-menu-item text-center wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-6.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Rainbow Vegetable Sandwich</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--Item7-->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-menu-item text-center wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-7.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Rainbow Vegetable Sandwich</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--Item8-->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-menu-item text-center wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-8.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Rainbow Vegetable Sandwich</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--Item9-->
+                <div class="col-lg-4 col-md-6 col-sm-6 offset-sm-3 offset-lg-0">
+                    <div class="single-menu-item text-center wow zoomIn">
+                        <div class="single-menu-item__img">
+                            <img src="./img/shop-1.jpg" class="img-fluid">
+                        </div>
+                        <div class="single-menu-item__text">
+                            <h3>
+                                <a href="">Rainbow Vegetable Sandwich</a>
+                            </h3>
+                            <p>Lorem ipsum dolor siamonsectetur adipiscing elit, sed do </p>
+                            <ul>
+                                <li>
+                                    <a href="" class="default-btn">ADD TO CART</a>
+                                </li>
+                                <li>
+                                    <div class="input-counter">
+                                        <div class="minus"> <span> - </span> </div>
+                                        <input type="text" value="0">
+                                        <div class="plus"> <span> + </span></div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--End Item9-->
+                <div class="col-lg-12 mt-5">
+                    <div class="pageNavigation text-center wow zoomIn">
+                        <ul>
+                            <li> <a href=""><i class="fas fa-arrow-left"></i></a> </li>
+                            <li class="active"> <a href="">1</a></li>
+                            <li> <a href="">2</a></li>
+                            <li> <a href="">3</a></li>
+                            <li> <a href=""><i class="fas fa-arrow-right"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!--End Book-Table-->
+    <!--END section-menu-->
     <!--Footer-->
     <footer class="footer">
         <div class="container">
@@ -316,8 +480,8 @@
     <div class="navigation">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
         <label for="navi-toggle" class="navigation__button">
-        <span class="navigation__icon">&nbsp;</span>
-    </label>
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
         <div class="navigation__background">&nbsp;</div>
         <div class="navigation__nav">
             <ul class="navigation__list">
@@ -344,6 +508,7 @@
     <script>
         new WOW().init();
     </script>
+
     <!-- script for coutup number -->
     <script src="./vendors/Waypoints/jquery.waypoints.min.js "></script>
     <script src="./vendors/counterup/inview.min.js "></script>
