--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <!--main-nav-->
         <nav class="navbar navbar-expand-xl navbar-light fixed-top">
             <div class="container navbar__main">
-                <a class="navbar-brand mr-5" href="#">
+                <a class="navbar-brand mr-5" href="index.html">
                     <img src="./img/logo.png" class="img-fluid navbar__logo" alt="Logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ml-auto mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">MENU</a>
@@ -57,20 +57,20 @@
                             <a class="nav-link" href="#">PAGES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">SHOP</a>
+                            <a class="nav-link" href="shop.html">SHOP</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link" href="blog.html">BLOG</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="contact.html">CONTACT</a>
                         </li>
                     </ul>
                     <div class="others-option">
                         <a class="mr-4" href="tel:0987654321">
                             <i class="fas fa-phone-volume mr-3"></i>+84987654321
                         </a>
-                        <a href="#" class="btn">BOOK TABLE →</a>
+                        <a href="book-table.html" class="btn">BOOK TABLE →</a>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     <h2 class="wow shake">About</h2>
                     <ul>
                         <li>
-                            <a href="">Home <i class="fas fa-chevron-right"></i> </a>
+                            <a href="index.html">Home <i class="fas fa-chevron-right"></i> </a>
                         </li>
                         <li>About</li>
                     </ul>
