--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header>
         <nav class="navbar navbar-expand-xl navbar-light fixed-top">
             <div class="container navbar__main">
-                <a class="navbar-brand mr-5" href="#">
+                <a class="navbar-brand mr-5" href="index.html">
                     <img src="./img/logo.png" class="img-fluid navbar__logo" alt="Logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ml-auto mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">MENU</a>
@@ -56,20 +56,20 @@
                             <a class="nav-link" href="#">PAGES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">SHOP</a>
+                            <a class="nav-link" href="shop.html">SHOP</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link" href="blog.html">BLOG</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="contact.html">CONTACT</a>
                         </li>
                     </ul>
                     <div class="others-option">
                         <a class="mr-4" href="tel:0987654321">
                             <i class="fas fa-phone-volume mr-3"></i>+84987654321
                         </a>
-                        <a href="#" class="btn">BOOK TABLE →</a>
+                        <a href="book-table.html" class="btn">BOOK TABLE →</a>
                     </div>
                 </div>
             </div>
@@ -182,7 +182,7 @@
                         <img src="./img/shape-1.png">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
                         <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
-                        <a href="#" class="default-btn" style="padding: 1rem 2rem 1rem 1.5rem;">OUR HISTRY <span class="ml-2">→</span>  </a>
+                        <a href="about.html" class="default-btn" style="padding: 1rem 2rem 1rem 1.5rem;">OUR HISTRY <span class="ml-2">→</span>  </a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -347,7 +347,7 @@
                         <p>The menu will be avail able for all or our coustomer please check button all menu</p>
                     </div>
                     <div class="col-lg-4 see-full-menu--btn wow flipInY">
-                        <a href="#" class="default-btn">SEE FULL MENU  <i class="mr-2">→</i>   </a>
+                        <a href="shop.html" class="default-btn">SEE FULL MENU  <i class="mr-2">→</i>   </a>
                     </div>
                 </div>
             </div>
@@ -441,7 +441,7 @@
                             <span>at Midday</span>
                         </h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas.</p>
-                        <a href="#" class="default-btn">ORDER NOW <i class="mr-2">→</i></a>
+                        <a href="shop.html" class="default-btn">ORDER NOW <i class="mr-2">→</i></a>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex justify-content-end">
@@ -679,7 +679,7 @@
                                 <a href="">Admin</a> / On May 05, 2020
                             </p>
                             <h3><a href="">A new restaurant in town that Looking think that Do care for new</a></h3>
-                            <a href="#" class="read-more">Read More<i class="mr-2">→</i></a>
+                            <a href="blog.html" class="read-more">Read More<i class="mr-2">→</i></a>
                         </div>
                     </div>
 
@@ -695,7 +695,7 @@
                                 <a href="">Admin</a> / On April 23, 2020
                             </p>
                             <h3><a href="">A new restaurant in town that Looking think that Do care for new</a></h3>
-                            <a href="#" class="read-more">Read More<i class="mr-2">→</i></a>
+                            <a href="blog.html" class="read-more">Read More<i class="mr-2">→</i></a>
                         </div>
                     </div>
                 </div>
@@ -710,7 +710,7 @@
                                 <a href="">Admin</a> / On August 21, 2020
                             </p>
                             <h3><a href="">A new restaurant in town that Looking think that Do care for new</a></h3>
-                            <a href="#" class="read-more">Read More<i class="mr-2">→</i></a>
+                            <a href="blog.html" class="read-more">Read More<i class="mr-2">→</i></a>
                         </div>
                     </div>
                 </div>
